--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "qa_wolf_take_home",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [],
+  "description": "QA Wolf Take-Home Assignment - Hacker News Article Sorting Validation with Web Interface",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "scrape": "node index.js",
+    "dev": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": ["playwright", "web-scraping", "hacker-news", "qa", "automation"],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "playwright": "^1.39.0"
+    "playwright": "^1.39.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
