--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "node server.js",
     "scrape": "node index.js",
     "dev": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "keywords": ["playwright", "web-scraping", "hacker-news", "qa", "automation"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "playwright": "^1.39.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^4.28.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
