--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "start": "node server.js",
     "scrape": "node index.js",
     "dev": "node server.js",
-
-    "test": "playwright test"
-=======
     "test": "node --test"
-
   },
-  "keywords": ["playwright", "web-scraping", "hacker-news", "qa", "automation"],
+  "keywords": [
+    "playwright",
+    "web-scraping",
+    "hacker-news",
+    "qa",
+    "automation"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "playwright": "^1.39.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "openai": "^4.28.0"
+    "openai": "^4.104.0",
+    "playwright": "^1.39.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
